envoy-debug-filter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: envoy-debug-filter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-debug-filter
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: fasle
      labels:
        app: envoy-debug-filter
    spec:
      containers:
      - name: envoy-debug-filter
        image: docker.io/mirage20/envoy-debug-filter
        ports:
        - containerPort: 8081
        - containerPort: 8082
        - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: envoy-debug-filter
spec:
  ports:
  - port: 8081
    name: grpc-gw
    targetPort: 8081
  - port: 8082
    name: grpc-in
    targetPort: 8082
  - port: 8083
    name: grpc-out
    targetPort: 8083
  selector:
    app: envoy-debug-filter

---

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoy-debug-filter
spec:
  filters:
  - filterConfig:
      grpc_service:
        google_grpc:
          stat_prefix: ext_authz
          target_uri: envoy-debug-filter:8081
        timeout: 10s
    filterName: envoy.ext_authz
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerProtocol: HTTP
      listenerType: GATEWAY
  - filterConfig:
      grpc_service:
        google_grpc:
          stat_prefix: ext_authz
          target_uri: envoy-debug-filter:8082
        timeout: 10s
    filterName: envoy.ext_authz
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerProtocol: HTTP
      listenerType: SIDECAR_INBOUND
  - filterConfig:
      grpc_service:
        google_grpc:
          stat_prefix: ext_authz
          target_uri: envoy-debug-filter:8083
        timeout: 10s
    filterName: envoy.ext_authz
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerProtocol: HTTP
      listenerType: SIDECAR_OUTBOUND
